augmented the  "single process" help in english and french

--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -86,7 +86,7 @@ SKEL_AUTODOWNLOAD_PROPERTY_MESSAGE_LABEL=Message
 SKEL_AUTODOWNLOAD_PROPERTY_DLURL_DESCRIPTION=The Sun's Auto Download URL for the JVM that should be downloaded by the wrapper when no JVM is found. Select the version of the JVM needed by your application. Select the highest possible version.
 SKEL_AUTODOWNLOAD_PROPERTY_DLURL_LABEL=Java VM to download
 #
-SKEL_GENERIC_PROPERTY_SINGLEPROCESS_DESCRIPTION=The default behaviour is to launch the java application in a different (detached)  process. If you want to force the wrapper to launch the Java application in the same process than the exe, than select this option.
+SKEL_GENERIC_PROPERTY_SINGLEPROCESS_DESCRIPTION=The default behaviour is to launch the java application in a different (detached) process by invoking java[w].exe (or jre[w].exe, according to the version of the JVM). If you want to force the wrapper to launch the Java application in the same process than the exe, than select this option. <p> When this option is enabled, JSmooth locates the JVM.dll and instanciates it, resulting in the VM running in the same process than the jsmooth wrapper (only the wrapper appears in the process list of the computer).
 SKEL_GENERIC_PROPERTY_SINGLEPROCESS_LABEL=Launch java app in the exe process
 SKEL_GENERIC_PROPERTY_DEBUG_DESCRIPTION=Enable the jsmooth debug console.
 SKEL_GENERIC_PROPERTY_DEBUG_LABEL=Debug console
