--- a/src/locale/Texts_fr.properties
+++ b/src/locale/Texts_fr.properties
@@ -86,7 +86,7 @@ SKEL_AUTODOWNLOAD_PROPERTY_MESSAGE_LABEL=Message
 SKEL_AUTODOWNLOAD_PROPERTY_DLURL_DESCRIPTION=Une URL du service Auto Download de Sun, permettant de téléchargement un installateur de JVM. Choisissez la version maximale supportée par votre application (généralement la plus récente).
 SKEL_AUTODOWNLOAD_PROPERTY_DLURL_LABEL=JVM à télécharger
 #
-SKEL_GENERIC_PROPERTY_SINGLEPROCESS_DESCRIPTION=Le comportement par défaut du squelette est de lancer l'application java dans un processus différent (détaché). Si vous souhaitez forcer le lanceur à utiliser le même processus que l'exécutable, activez cette option. <p> Lorsque cette option est activée, JSmooth tentera toujours d'instancier une machine virtuelle java en utilisant la DLL (généralement jvm.dll) fournie par la JVM de Sun.
+SKEL_GENERIC_PROPERTY_SINGLEPROCESS_DESCRIPTION=Le comportement par défaut du squelette est de lancer l'application java dans un processus différent (détaché). Si vous souhaitez forcer le lanceur à utiliser le même processus que l'exécutable, activez cette option. <p> Lorsque cette option est activée, JSmooth tentera toujours d'instancier une machine virtuelle java en utilisant la DLL (généralement jvm.dll) fournie par la JVM de Sun. Dans ce cas, un seul processus apparaitra pour votre application dans la liste des processus de l'ordinateur.
 SKEL_GENERIC_PROPERTY_SINGLEPROCESS_LABEL=Lancer java dans le même processus
 SKEL_GENERIC_PROPERTY_DEBUG_DESCRIPTION=Activer la console de débogage JSmooth
 SKEL_GENERIC_PROPERTY_DEBUG_LABEL=Console de débogage
