*** empty log message ***

--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -22,8 +22,8 @@ EXECUTABLE_LABEL=Executable Binary
 EXECUTABLE_HELP=This is the name given to the executable binary.<br>It must end with the ".exe" suffix. For instance, <tt>myprogram.exe</tt> is just fine.
 CURRENTDIR_LABEL=Current Directory
 CURRENTDIR_HELP=Define here the directory to be set as the working directory of the the application, when launched. <p>Just leave it empty if you don't need any modification of this value at startup.<p>Typical use of this option is to go up one level when the executable is in a <tt>bin</tt> subdirectory of the program root.<p><b>WARNING</b>: Unlike the other files or directory options, which are all relative to the project file, this value is always relative to the generated executable location. That is, if you set <tt>".."</tt> or "an\\other\\dir" here, the generated wrapper will change to this directory from <u>its</u> own current directory.<p> You can also use the ${EXECUTABLEPATH} keyword, which will be replaced at runtime by the directory of the executable.
-CURRENTDIR_FORCEEXEPATH=Sets the executable folder as current directory of the application. This is equivalent to setting the "current dir" as "${EXECUTABLEPATH}".
-CURRENTDIR_FORCEEXEPATH_HELP=If this option is selected, the current directory of your application is forced to be the directory where the executable is installed.
+CURRENTDIR_FORCEEXEPATH=Sets the executable folder as current directory of the application.
+CURRENTDIR_FORCEEXEPATH_HELP=If this option is selected, the current directory of your application is forced to be the directory where the executable is installed. <p>  This is equivalent to setting the "current dir" to "${EXECUTABLEPATH}".
 SKELETONPROPERTIES_LABEL=Skeleton Properties
 SKELETONPROPERTIES_HELP=The table above shows the properties associated to the selected skeleton. Change the values of the properties to customize the behaviour of the native executable wrapper generated.
 ICONLOCATION_LABEL=Executable Icon
