--- a/src/locale/Texts_fr.properties
+++ b/src/locale/Texts_fr.properties
@@ -22,9 +22,8 @@ EXECUTABLE_LABEL=Binaire exécutable
 EXECUTABLE_HELP=Indiquez le nom à donner à votre exécutable. <br>Il doit finir par ".exe" de manière à être correctement reconnu par Windows. Par exemple <tt>monprogramme.exe</tt>.
 CURRENTDIR_LABEL=Répertoire de travail
 CURRENTDIR_HELP=Sélectionnez le répertoire qui sera considéré comme le répertoire de travail (également appelé "répertoire courant") par votre application. <p>Vous pouvez laisser ce champ vide si votre application n'en a pas besoin ou si la valeur par défaut vous convient (celle-ci étant le répertoire d'où l'exécutable a été lancé). <p> Un exemple courant d'utilisation de ce paramètre est de remonter d'un niveau à la racine du répertoire d'installation de votre application, lorsque l'exécutable se trouve dans un sous-répertoire <tt>bin/</tt>. <p> <b>ATTENTION</b>: Contrairement aux autres fichiers et répertoires d'un projet JSmooth, qui sont tous relatifs au fichier projet (.jsmooth), celui-ci est relatif au répertoire courant de l'application. <br> Par exemple, si vous mettez la valeur <tt>..</tt> ou <tt>un/autre/repertoire</tt>, le lanceur changera le répertoire de travail de votre application relativement au chemin courant. <p> Vous pouvez également utiliser le mot clé  ${EXECUTABLEPATH}, qui sera remplacé au lancement par le répertoire où se situe l'exécutable.
-CURRENTDIR_FORCEEXEPATH=Définit le répertoire de l'exécutable comme répertoire courant. Ceci est équivalent au mot clé ${EXECUTABLEPATH} positionné dans le champ texte.
-CURRENTDIR_FORCEEXEPATH_HELP=Si cette option est cochée, JSmooth définit le répertoire où se trouve l'exécutable comme répertoire courant au démarrage.
-If this option is selected, the current directory of your application is forced to be the directory where the executable is installed.
+CURRENTDIR_FORCEEXEPATH=Force le répertoire de l'exécutable comme répertoire courant. 
+CURRENTDIR_FORCEEXEPATH_HELP=Si cette option est cochée, JSmooth définit le répertoire où se trouve l'exécutable comme répertoire courant au démarrage. <p> Ceci est équivalent au mot clé ${EXECUTABLEPATH} positionné dans le champ texte.
 SKELETONPROPERTIES_LABEL=Propriétés du squelette
 SKELETONPROPERTIES_HELP=Les champs ci-contre vous permettent de spécialiser le comportement du squelette de lancement utilisé.
 ICONLOCATION_LABEL=Icone de l'exécutable
