--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -95,7 +95,7 @@ SKEL_GENERIC_PROPERTY_DEBUG_LABEL=Debug console
 SKEL_CUSTOMDOWNLOAD_DESCRIPTION=This skeleton wraps <b>GUI applications</b>.<ul> <li>No console I/O is displayed <li>If no Java VM is found, the user is proposed to download and execute a file from the web. <li>The URL that the wrapper uses to download a file when no JVM is found must be defined in the wrapper. The URL can point on a .exe, a .cab, or any other filetype. Please note that some enterprise firewalls filter executable files. </ul> Arguments can be passed to the application (either use the JSmooth default argument mechanism, or create a shortcut with arguments).
 SKEL_CUSTOMDOWNLOAD_PROPERTY_MESSAGE_DESCRIPTION=When no JVM is found in the target computer, the user is prompted with the message defined below. Then, the default browser is launched with the URL defined here.
 SKEL_CUSTOMDOWNLOAD_PROPERTY_MESSAGE_LABEL=Message
-SKEL_CUSTOMDOWNLOAD_PROPERTY_URL_DESCRIPTION=URL of a file to download and execute. It must start with http://.....
+SKEL_CUSTOMDOWNLOAD_PROPERTY_URL_DESCRIPTION=URL of a file to download and execute. It must start with http://, https://, or ftp://...
 SKEL_CUSTOMDOWNLOAD_PROPERTY_URL_LABEL=URL
 #
 SKEL_CONSOLEWRAPPER_DESCRIPTION=This skeleton wraps <b>console applications</b>. <ul> <li> Standard Input/Output and Error streams are available <li> If no Java VM is found, it displays a default message. </ul> Although it is designed for console application (i.e. launched from the command.com shell prompt), it can launch standard GUI application. In such a case, any output of the java application (from System.out or System.err) is displayed in the a DOS Console.
@@ -150,3 +150,7 @@ comes with the package. Additional software bundled with JSmooth may come with t
 <li> Please check the <a href="LICENSE.txt">license</a>. You can also consult the <a href="GPL-LICENSE.txt">GPL license</a> (for JSmooth) or the <a href="LGPL-LICENSE.txt">LGPL license</a> (for the executable source code). \
 </ul><h2>JSmooth Support</h2> \
 Please submit any bug you may find to <a href="http://sourceforge.net/tracker/?group_id=86730">the jsmooth tracker</a>. Should you have any question, please use <a href="http://sourceforge.net/forum/?group_id=86730">the forum</a> (hosted at sourceforge's).
+#
+#
+SKEL_GENERIC_SINGLEINSTANCE=Single instance
+SKEL_GENERIC_SINGLEINSTANCE_DESCRIPTION=When this option is enabled, only one instance of the application can run at any time. <p> If the instance of the application is running, it is requested to bring its window (if any) to the front.
