--- a/src/locale/Texts_fr.properties
+++ b/src/locale/Texts_fr.properties
@@ -94,7 +94,7 @@ SKEL_GENERIC_PROPERTY_DEBUG_LABEL=Console de débogage
 SKEL_CUSTOMDOWNLOAD_DESCRIPTION=Ce squelette permet de lancer des <b>applications graphiques</b>. <ul><li>Aucune console d'entrée/sortie ne s'affiche</li><li>Si aucune JVM n'est trouvée, l'exécutable propose à l'utilisateur de télécharger un fichier depuis le Web.</li><li>L'URL utilisée pour le téléchargement doit être précisée dans le squelette. L'URL peut pointer sur un fichier de type .exe, .cab, ou n'importe quel autre type reconnu par Windows. </li></ul> <p> Notez que certains pare-feux d'entreprise filtrent les fichiers exécutables. <p> Des arguments peuvent être passés à l'application (soit en utilisant le mécanisme d'arguments par défaut de JSmooth, soit en utilisant les raccourcis Windows).
 SKEL_CUSTOMDOWNLOAD_PROPERTY_MESSAGE_DESCRIPTION=Lorsqu'aucune JVM n'est trouvée sur l'ordinateur, l'utilisateur se voit proposer le téléchargement par le message défini ci-contre.
 SKEL_CUSTOMDOWNLOAD_PROPERTY_MESSAGE_LABEL=Message
-SKEL_CUSTOMDOWNLOAD_PROPERTY_URL_DESCRIPTION=URL d'un fichier à télécharger puis exécuter. Cette URL doit commencer par <tt>http://...</tt>
+SKEL_CUSTOMDOWNLOAD_PROPERTY_URL_DESCRIPTION=URL d'un fichier à télécharger puis exécuter. Cette URL doit commencer par http://, https://, ou ftp://...
 SKEL_CUSTOMDOWNLOAD_PROPERTY_URL_LABEL=URL
 #
 SKEL_CONSOLEWRAPPER_DESCRIPTION=Ce squelette permet de lancer des <b>applications en console</b>. <ul><li>Les E/S standard et d'erreur sont disponibles et affichées à l'utilisateur</li><li>Si aucune JVM n'est trouvée, un message est affiché sur la console</li></ul> Bien qu'il soit destiné principalement à lancer des applications utilisant la console (lancées à partir du shell cmd ou command.com par exemple), il peut être utilisé pour lancer des applications graphiques ayant besoin d'une console de sortie. Dans ce dernier cas, toutes les sorties (de System.out et System.err) sont affichées dans une console DOS.
@@ -145,3 +145,9 @@ Le project JSmooth est distribué sous licence GNU GPL (General Public License). 
 <li> Merci de lire les détails de <a href="LICENSE.txt">la licence de ce logiciel</a>. Vous pouvez également consulter la <a href="GPL-LICENSE.txt">licence GPL</a> (pour JSmooth) ou la <a href="LGPL-LICENSE.txt">licence LGPL</a> (pour le code source des executables). \
 </ul><h2>Support utilisateurs</h2> \
 Si vous rencontrez un bug, merci de le soumettre au <a href="http://sourceforge.net/tracker/?group_id=86730">tracker de jsmooth</a>. Si vous avez des questions sur l'utilisation de JSmooth, n'hésitez pas à utiliser <a href="http://sourceforge.net/forum/?group_id=86730">le forum</a> (anglais) sur sourceforge.
+#
+#
+SKEL_GENERIC_SINGLEINSTANCE=Instance unique de l'application
+SKEL_GENERIC_SINGLEINSTANCE_DESCRIPTION=Si cette option est activée, une seule instance de l'application peut être démarrée. <p> Si l'instance unique de l'application est déjà lancée, sa fenêtre (s'il y en a une) s'affiche au premier plan.
+
+When this option is enabled, only one instance of the application can run at any time. <p> If another application is running, it is requested to bring its window (if any) to the front.
