--- a/src/locale/Texts_fr.properties
+++ b/src/locale/Texts_fr.properties
@@ -143,11 +143,13 @@ Le project JSmooth est distribué sous licence GNU GPL (General Public License). 
 <li> Vous pouvez trouver les informations spécifiques à cette version de JSmooth en consultant soit le fichier <a href="Readme.txt">Readme.txt</a>, soit le <a href="Changelog.txt">Changelog</a>. \
 <li> La documentation est disponible en anglais aux formats <a href="docs/jsmooth-doc.html">HTML</a> et <a href="docs/jsmooth-doc.pdf">PDF</a>. \
 <li> Merci de lire les détails de <a href="LICENSE.txt">la licence de ce logiciel</a>. Vous pouvez également consulter la <a href="GPL-LICENSE.txt">licence GPL</a> (pour JSmooth) ou la <a href="LGPL-LICENSE.txt">licence LGPL</a> (pour le code source des executables). \
+<li> Vous pouvez également utiliser <a href="docs/jniapi/index.html">l'API JNI de JSmooth</a> pour accéder à certaines fonctions spécifiques de Windows depuis votre application java.\
 </ul><h2>Support utilisateurs</h2> \
 Si vous rencontrez un bug, merci de le soumettre au <a href="http://sourceforge.net/tracker/?group_id=86730">tracker de jsmooth</a>. Si vous avez des questions sur l'utilisation de JSmooth, n'hésitez pas à utiliser <a href="http://sourceforge.net/forum/?group_id=86730">le forum</a> (anglais) sur sourceforge.
 #
 #
 SKEL_GENERIC_SINGLEINSTANCE=Instance unique de l'application
 SKEL_GENERIC_SINGLEINSTANCE_DESCRIPTION=Si cette option est activée, une seule instance de l'application peut être démarrée. <p> Si l'instance unique de l'application est déjà lancée, sa fenêtre (s'il y en a une) s'affiche au premier plan.
-
-When this option is enabled, only one instance of the application can run at any time. <p> If another application is running, it is requested to bring its window (if any) to the front.
+#
+SKEL_GENERIC_JNISMOOTH=Utiliser les classes JNI de JSmooth
+SKEL_GENERIC_JNISMOOTH_DESCRIPTION=JSmooth peut mettre à disposition de votre application certaines classes offrant un accès à des fonctions natives de Windows, qui ne sont normalement pas accessible depuis Java. Pour avoir accès à ces fonctionnalité, activez cette option.
