--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -148,9 +148,13 @@ comes with the package. Additional software bundled with JSmooth may come with t
 <li> You can find specific information on this version of JSmooth in either the <a href="Readme.txt">Readme.txt</a> or the <a href="Changelog.txt">Changelog</a>. \
 <li> The documentation is available in <a href="docs/jsmooth-doc.html">HTML</a> and <a href="docs/jsmooth-doc.pdf">PDF</a> format. \
 <li> Please check the <a href="LICENSE.txt">license</a>. You can also consult the <a href="GPL-LICENSE.txt">GPL license</a> (for JSmooth) or the <a href="LGPL-LICENSE.txt">LGPL license</a> (for the executable source code). \
+<li> Some wrappers also provide a <a href="docs/jniapi/index.html">JSmooth JNI API</a> to access Windows-specific function from your java program. \
 </ul><h2>JSmooth Support</h2> \
 Please submit any bug you may find to <a href="http://sourceforge.net/tracker/?group_id=86730">the jsmooth tracker</a>. Should you have any question, please use <a href="http://sourceforge.net/forum/?group_id=86730">the forum</a> (hosted at sourceforge's).
 #
 #
 SKEL_GENERIC_SINGLEINSTANCE=Single instance
 SKEL_GENERIC_SINGLEINSTANCE_DESCRIPTION=When this option is enabled, only one instance of the application can run at any time. <p> If the instance of the application is running, it is requested to bring its window (if any) to the front.
+#
+SKEL_GENERIC_JNISMOOTH=Use JNISmooth classes
+SKEL_GENERIC_JNISMOOTH_DESCRIPTION=When launched with JSmooth, your application can optionnally be provided the jsmooth.Native class, which offers functions that are not available from a standard JVM. If you don't use the jsmooth.Native class, you can leave this option disabled (although it won't harm).
