--- a/Changelog
+++ b/Changelog
@@ -9,6 +9,8 @@
 	bringing the window of the first one to front.
 	- Added JNI functions available to the java application when
 	launched using the JVM DLL
+	- Fixes bug #1720562: winservice-wrapper ignores "currentDirectory"
+	param
 
 0.9.9-6
 	- Fixed a DOS console appearing for a fraction of second when
