adds support for the splash screen in the jsmooth application

--- a/src/locale/Texts_fr.properties
+++ b/src/locale/Texts_fr.properties
@@ -145,7 +145,8 @@ Le project JSmooth est distribué sous licence GNU GPL (General Public License). 
 <li> Merci de lire les détails de <a href="LICENSE.txt">la licence de ce logiciel</a>. Vous pouvez également consulter la <a href="GPL-LICENSE.txt">licence GPL</a> (pour JSmooth) ou la <a href="LGPL-LICENSE.txt">licence LGPL</a> (pour le code source des executables). \
 <li> Vous pouvez également utiliser <a href="docs/jniapi/index.html">l'API JNI de JSmooth</a> pour accéder à certaines fonctions spécifiques de Windows depuis votre application java.\
 </ul><h2>Support utilisateurs</h2> \
-Si vous rencontrez un bug, merci de le soumettre au <a href="http://sourceforge.net/tracker/?group_id=86730">tracker de jsmooth</a>. Si vous avez des questions sur l'utilisation de JSmooth, n'hésitez pas à utiliser <a href="http://sourceforge.net/forum/?group_id=86730">le forum</a> (anglais) sur sourceforge.
+Si vous rencontrez un bug, merci de le soumettre au <a href="http://sourceforge.net/tracker/?group_id=86730">tracker de jsmooth</a>. Si vous avez des questions sur l'utilisation de JSmooth, n'hésitez pas à utiliser <a href="http://sourceforge.net/forum/?group_id=86730">le forum</a> (anglais) sur sourceforge.\
+<p> Merci à Sourceforge pour l'hébergement du projet. <br> Aucun object Swing n'a été maltraité durant le développement de cet outil.
 #
 #
 SKEL_GENERIC_SINGLEINSTANCE=Instance unique de l'application
@@ -153,3 +154,6 @@ SKEL_GENERIC_SINGLEINSTANCE_DESCRIPTION=Si cette option est activée, une seule i
 #
 SKEL_GENERIC_JNISMOOTH=Utiliser les classes JNI de JSmooth
 SKEL_GENERIC_JNISMOOTH_DESCRIPTION=JSmooth peut mettre à disposition de votre application certaines classes offrant un accès à des fonctions natives de Windows, qui ne sont normalement pas accessible depuis Java. Pour avoir accès à ces fonctionnalité, activez cette option.
+#
+SKEL_GENERIC_PROPERTY_SPLASH=Fenêtre Splash
+SKEL_GENERIC_PROPERTY_SPLASH_DESCRIPTION=JSmooth peut prendre en charge l'affichage d'une image splash au démarrage, pendant que l'exécutable charge la VM Java et démarre votre application. <br> La fenêtre splash se ferme automatiquement dès que votre application ouvre une fenêtre ou quitte. <br> Note: il est possible d'utiliser le pont JNI fourni par JSmooth pour rajouter une barre de progression ou pour fermer la fenêtre depuis Java.
