--- a/src/locale/Texts.properties
+++ b/src/locale/Texts.properties
@@ -132,11 +132,11 @@ SKEL_WINSERVICE_LOGFILE_LABEL=Logfile
 SKEL_WINSERVICE_LOGFILE_DESCRIPTION=Specify here a name for the logfile of the service. This logfile is located in the same directory than the executable binary.
 SKEL_WINSERVICE_INTERACTIVE_LABEL=Interactive service
 SKEL_WINSERVICE_INTERACTIVE_DESCRIPTION=Enable this value if the service shall be allowed by Windows to operate interactions with the desktop. <p> For security reasons, Microsoft recommands to use a client-server approach to add a GUI to a service. <p> If this option is not enabled, the application will not be able to create windows or use the desktop. Note also that if your service starts at startup, the desktop may not be available.
-
+#
 #
 GENERAL_CANTOPENFILE=The JSmooth application couldn't open the file specified
 GENERAL_ERROR_LABEL=Error
-
+#
 JSMOOTH_WELCOME_SCREEN=<h1>JSmooth release @{VERSION}@ @{RELEASEINFO}@</h1>\
 <h2>Thanks for using JSmooth!</h2>\
 The JSmooth project is distributed under the terms of the GNU \
@@ -150,7 +150,8 @@ comes with the package. Additional software bundled with JSmooth may come with t
 <li> Please check the <a href="LICENSE.txt">license</a>. You can also consult the <a href="GPL-LICENSE.txt">GPL license</a> (for JSmooth) or the <a href="LGPL-LICENSE.txt">LGPL license</a> (for the executable source code). \
 <li> Some wrappers also provide a <a href="docs/jniapi/index.html">JSmooth JNI API</a> to access Windows-specific function from your java program. \
 </ul><h2>JSmooth Support</h2> \
-Please submit any bug you may find to <a href="http://sourceforge.net/tracker/?group_id=86730">the jsmooth tracker</a>. Should you have any question, please use <a href="http://sourceforge.net/forum/?group_id=86730">the forum</a> (hosted at sourceforge's).
+Please submit any bug you may find to <a href="http://sourceforge.net/tracker/?group_id=86730">the jsmooth tracker</a>. Should you have any question, please use <a href="http://sourceforge.net/forum/?group_id=86730">the forum</a> (hosted at sourceforge's).\
+<p> Thanks to Sourceforge for hosting the project. <br> No Swing objects were hurt during the development of this tool.
 #
 #
 SKEL_GENERIC_SINGLEINSTANCE=Single instance
@@ -158,3 +159,6 @@ SKEL_GENERIC_SINGLEINSTANCE_DESCRIPTION=When this option is enabled, only one in
 #
 SKEL_GENERIC_JNISMOOTH=Use JNISmooth classes
 SKEL_GENERIC_JNISMOOTH_DESCRIPTION=When launched with JSmooth, your application can optionnally be provided the jsmooth.Native class, which offers functions that are not available from a standard JVM. If you don't use the jsmooth.Native class, you can leave this option disabled (although it won't harm).
+#
+SKEL_GENERIC_PROPERTY_SPLASH=Splash Window
+SKEL_GENERIC_PROPERTY_SPLASH_DESCRIPTION=The wrapper can display an image at startup, while it loads the Java VM and starts your application. <br> The splash window is automatically closed when your application opens its first visible window, or at exit. <br> Note: it is possible use the JNI bridge provided by JSmooth to add a progress bar to the splash window or to close it programmatically.
